force-app/main/default/objects/PMC_DH_Digital_Hub_Restriction_Setting__mdt/PMC_DH_Digital_Hub_Restriction_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Digital Hub Restriction Setting</label>
    <pluralLabel>Digital Hub Restriction Settings</pluralLabel>
</CustomObject>