force-app/main/default/objects/PMC_DH_Digital_Hub_Restriction_Setting__mdt/fields/PMC_DH_isActive__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>