force-app/main/default/objects/PMC_DH_Digital_Hub_Restriction_Setting__mdt/fields/PMC_DH_Restricted_Value__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Restricted_Value__c</fullName>
    <label>Restricted Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>